Fixed styles to work on mobile

--- a/src/Components/Navbar/styles.scss
+++ b/src/Components/Navbar/styles.scss
@@ -1,6 +1,7 @@
 .navbar{
     position: fixed;
     width: 100%;
+    max-width: 100vw;
     height: 5rem;
     padding-inline: 5rem;
     display: flex;
