--- a/src/Components/Recommendations/styles.scss
+++ b/src/Components/Recommendations/styles.scss
@@ -1,14 +1,24 @@
 .recommendations__wrapper{
     background-color: rgb(240, 235, 235);
     width: 100%;
-    padding: 2rem 20%;
+    padding: 2rem 15%;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+
+    @media (max-width:1024px) {
+        padding: 2rem .5rem;
+    }
+    
+    @media (max-width:768px) {
+        font-size: .8rem;
+
+        button{
+            font-size: .7rem;
+        }
+    }
 }
 
 .recommendations{
     background-color: rgb(222, 218, 241);
-    width: 100%;
-    height: 100%;
     padding: 1rem;
     display: flex;
     flex-direction: column;
@@ -23,18 +33,35 @@
     position: relative;
     box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.5);
         
+    @media (max-width:768px) {
+        flex-direction: column;
+        
+    }
     img{
         width: 35%;
         aspect-ratio: 1;
         left: 0;
+
+        &.right{
+            order: 1;
+            @media (max-width:768px) {
+                order: 0;
+            }
+        }
+
+        @media (max-width:768px) {
+            width: 100%;
+            
+        }
     }
 }
 
 .recommendation__info{
-    width: 65%;
     display: flex;
     flex-direction: column;
     padding: 10px;
+
+
 }
 
 .recommendation__top{
@@ -44,10 +71,16 @@
     flex-direction: column;
     gap: 2rem;
 
+ 
+
 }
 
 .recommendation__title{
     font-size: 4rem;
+
+    @media (max-width:768px) {
+        font-size: 3rem;
+    }
 
 }
 .recommendation__text{
@@ -62,13 +95,19 @@
     justify-content: space-between;
     align-items: center;
     background-color: rgb(222, 218, 241);
+    margin-top: 10px;
     padding-inline: 2rem;
+
+    @media (max-width:768px) {
+        padding-inline: .5rem;;
+    }
 }
 
 .recommendation__buy{
     display: flex;
     align-items: center;
     gap: 10px;
+   
 }
 
 .buy__add{
@@ -76,11 +115,12 @@
     border-radius: .5rem;
     cursor: pointer;
     background-color: rgb(252, 252, 229);
+    flex: 1;
 
 }
 
 .recommendation__tags{
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
 }
