--- a/src/Components/Search/styles.scss
+++ b/src/Components/Search/styles.scss
@@ -13,9 +13,6 @@
     align-items: center;
 
 
-    @media (max-width:768px) {
-        height: 50px !important;
-    }
 }
 
 .input__container{
