--- a/src/Pages/Landing/styles.scss
+++ b/src/Pages/Landing/styles.scss
@@ -9,7 +9,6 @@
     position: relative;
     inset: 0;
     width: 100%;
-/*     height: 100vh; */
     max-height: 100vh;
     aspect-ratio: 1.5;
     overflow: hidden;
@@ -21,6 +20,13 @@
         inset: 0;
         max-width: 100%;
     }
+    @media (max-width:768px) {
+        width: auto;
+        height: 70vh;
+        img{
+            height: 70vh;
+        }
+    }
 }
 
 .hero__text{
@@ -30,6 +36,14 @@
     width: 50%;
     margin-left: 10%;
     font-style: italic;
+
+    @media (max-width:1024px) {
+        font-size: 8vw;
+    }
+
+    @media (max-width:425px) {
+        font-size: 12vw;
+    }
     
 }
 
