--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -45,9 +45,12 @@ input{
     border-radius: 0;
 }
 
-body{
+body, html{
     font-family: 'Roboto Mono', monospace;
+    
 }
+
+
 
 a{
     text-decoration: none;
